--- a/simlane/templates/components/navbar.html
+++ b/simlane/templates/components/navbar.html
@@ -13,11 +13,11 @@
           <!-- Desktop: Full logo -->
           <img src="{% static 'images/logo.svg' %}"
                alt="SimLane"
-               class="h-10 hidden md:block dark:invert" />
+               class="h-10 hidden md:block dark:invert dark:hue-rotate-180" />
           <!-- Mobile: Icon only -->
           <img src="{% static 'images/icon.svg' %}"
                alt="SimLane"
-               class="h-10 md:hidden dark:invert" />
+               class="h-10 md:hidden dark:invert dark:hue-rotate-180" />
         </a>
       </div>
       
