--- a/simlane/templates/sim/events/upcoming_list.html
+++ b/simlane/templates/sim/events/upcoming_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}Events - SimLane{% endblock %}
+{% block title %}Upcoming Events - SimLane{% endblock %}
 
 {% block content %}
     {% include "sim/events/list_partial.html" %}
