--- a/simlane/templates/sim/cars/cars_list_partial.html
+++ b/simlane/templates/sim/cars/cars_list_partial.html
@@ -31,7 +31,7 @@
                     </div>
 
                     <div class="flex items-center justify-between mb-3">
-                        <span class="text-sm text-gray-500 dark:text-gray-400">{{ car.car_class.name }}</span>
+                        <c-car-category-badge category="{{ car.category }}" size="sm" />
                         {% if car.release_year %}
                             <span class="text-sm text-gray-500 dark:text-gray-400">{{ car.release_year }}</span>
                         {% endif %}
